# TMDB-Movie-Finder

./: CMakeLists.txt  CMakePresets.json  CppProperties.json  README.md  RedBlackTree.cpp  RedBlackTree.hpp  SplayTree.cpp  SplayTree.hpp  mOViER.sln  mOViER.vcxproj  mOViER.vcxproj.filters  old_x64-toolchain.cmake
Libraries/: CMakeLists.txt
Libraries/curl/lib/: libcurl.exp  libcurl.lib
Shibani_RB_Code/: CMakeLists.txt  RedBlackTree.cpp  RedBlackTree.hpp  main.cpp
Shibani_Splay_Code/: CMakeLists.txt  SplayTree.cpp  SplayTree.hpp  main.cpp
ui/: CMakeLists.txt
ui/assets/: content.html  favorites.html  help.html  search.html  sidebar.html
ui/assets/styles/: content_styles.css  sidebar_styles.css
ui/src/: MyApp.cpp  MyApp.h  main.cpp
ux/: CMakeLists.txt  test.cpp
ux/assets/: favorites.html  help.html  prompt.html  search.html  settings.html  sidebar.html  stats.html
ux/assets/data/: movieSearchResults.json
ux/assets/js/: bindings.js  prompt.js  search.js  stats.js
ux/assets/styles/: prompt.css  sidebar_styles.css  styles.css
ux/src/: JSSerial.hpp  Movie.hpp  MovieLib.cpp  MovieLib.h  MyApp.cpp  MyApp.h  RedBlackTree.cpp  RedBlackTree.hpp  SplayTree.cpp  SplayTree.hpp
ux/test/: CMakePresets.json  makefile
